<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="130dp"

        tools:context=".MainActivity">

        <TextView
            android:textAlignment="center"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:text="@string/login">

        </TextView>

        <EditText
            android:background="@drawable/custom_input"
            android:padding="10dp"
            android:paddingStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:minHeight="48dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_input"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingStart="30dp"
            tools:ignore="RtlSymmetry">

        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="11sp"

                android:text="@string/remember_me">
            </CheckBox>

            <TextView
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="textEnd"
                android:textColor="@color/clickable"
                android:minHeight="48dp"
                android:onClick="forget_password"
                android:text="@string/forget_password"
                android:textSize="11sp"
               >
            </TextView>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:text="Login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="100dp"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:textSize="15sp"
                android:text="@string/new_member">
            </TextView>

            <TextView
                android:id="@+id/register_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:contextClickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:onClick="register"
                android:padding="5dp"
                android:text="@string/register"
                android:textColor="@color/clickable"
                android:textSize="15sp">

            </TextView>
        </LinearLayout>





    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>